--- a/src/theme.css
+++ b/src/theme.css
@@ -27,7 +27,9 @@ h1, h2, h3, h4, h5, h6,
 .navbar-brand {
     font-weight: 700;
 }
-
+.insta-title{
+  text-align: center;
+}
 
 /* --- ESTILOS PARA RESPONSIVIDAD --- */
 @media (max-width: 768px) {
