--- a/src/Preparaciones.css
+++ b/src/Preparaciones.css
@@ -36,7 +36,7 @@
 }
 
 .preparacion-image {
-    width: 280px; 
+    width: 90%; 
     height: 280px; 
     object-fit: cover; 
     display: block;
@@ -52,26 +52,18 @@
     margin-bottom: 5px;
 }
 
-.preparaciones-page-content .carousel-control-prev,
-.preparaciones-page-content .carousel-control-next {
-    background-color: white; 
-    border-radius: 50%; 
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    width: 50px;
-    height: 50px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
 .preparaciones-page-content .carousel-control-prev-icon,
 .preparaciones-page-content .carousel-control-next-icon {
-    filter: invert(1);
+    background-image: none !important; 
+
+    filter: none; 
 }
 
 @media (max-width: 768px) {
   .preparacion-image {
-    width: 150px; 
-    height: 150px; 
+    width: 90%; 
+    height:auto; 
+    min-height: 140px;
   }
 
   .preparacion-card {
